# bionic-boarder-simulation-tool

./: CHANGELOG.md  README.md  pyproject.toml
analysis/: sim_kinematic_data_plotting.py  verify_spike_x_accel_from_sim_push.py
augmented_skateboarding_simulator/: app_input_arguments.schema.json  logger.py  main.py  mission_elapsed_time.py  sim_time_manager.py
augmented_skateboarding_simulator/riding/: battery_discharge_model.py  eboard.py  eboard_kinematic_state.py  eboard_state_recorder.py  frictional_deceleration_model.py  kinematic_loop.py  motor_controller.py  motor_controllery.py  motor_state.py  push_model.py
augmented_skateboarding_simulator/vesc/: command_message_processor.py  fw.py  fw_6_00.py
bionic_boarder_simulation_tool/: app_input_arguments.schema.json  logger.py  main.py
bionic_boarder_simulation_tool/riding/: __init__.py  battery_discharge_model.py  eboard.py  eboard_kinematic_state.py  eboard_state_recorder.py  frictional_deceleration_model.py  kinematic_loop.py  motor_controller.py  push_model.py
bionic_boarder_simulation_tool/vesc/: command_message_processor.py  fw.py  fw_6_00.py  fw_6_02.py  fw_6_05.py
tests/: app_input_arguments_example.json  test_app_input_arguments_schema.py  test_command_message_processor.py  test_sim_time_manager.py
tests/functional/: bionic_boarder_msg_requester.py  bluetooth_socket_fixture.py  conftest.py  motor_controller_configuration_msg_requester.py  start_sim_fixture.py  test_bionic_boarder_command.py  test_erpm_values.py  test_increase_and_decrease_motor_erpm.py  test_set_erpm_command.py  (+6 more)
(+27 files in other folders)
