[tool.poetry]
name = "augmented-skateboarding-simulator"
version = "0.1.0"
description = ""
authors = ["bobacktech <bobacktech@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.4.2"
pyserial = "^3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
