[tool.poetry]
name = "bionic-boarder-simulation-tool"
version = "0.1.0"
description = ""
authors = ["bobacktech <bobacktech@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.3"
pyserial = "3.5"
multiprocess = "0.70.15"
pytest = "7.4.3"
pytest-mock = "3.12.0"
pytest-asyncio = "0.21.0"
Sphinx = "7.2.6"
numpy = "1.26.4" 
jsonschema = "4.23.0"
matplotlib = "3.9.2"
pyftdi = "0.55.4"
structlog = "24.4.0"
bleak = "2.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests/unit", "tests/functional"] 
addopts = "-rs"
asyncio_mode = "auto"